--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "emulator": "~/Library/Android/sdk/emulator/emulator -avd Pixel_2_API_30_R",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
