--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^5.0.0",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "^2.14.1",
