--- a/package.json
+++ b/package.json
@@ -26,10 +26,17 @@
     "react-native-image-picker": "^5.0.0",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
