--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^0.27.2",
     "react": "18.1.0",
+    "react-moment": "^1.1.3",
     "react-native": "0.70.6",
     "react-native-axios": "^0.17.1",
     "react-native-date-picker": "^4.2.6",
