--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
@@ -22,10 +23,13 @@
     "react-native-axios": "^0.17.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.2.0",
+    "react-native-permissions": "^3.6.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
