--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
+    "react-native-image-slider-banner": "^1.0.3",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.2.0",
     "react-native-permissions": "^3.6.1",
